--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^12.1.5",
     "@types/jest": "^27.5.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
